* Encode link and guid urls in rss feeds to avoid illegal utf8 slipping in.

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,9 @@ ikiwiki (1.16) UNRELEASED; urgency=low
   * Add permalink and author support to meta plugin, affecting RSS feeds
     and blog pages.
   * Various CSS and formatting changes.
+  * Encode link and guid urls in rss feeds to avoid illegal utf8 slipping in.
 
- -- Joey Hess <joeyh@debian.org>  Thu,  3 Aug 2006 18:45:36 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu,  3 Aug 2006 21:36:09 -0400
 
 ikiwiki (1.15) unstable; urgency=low
 
