* Add xhtml files to the default prune regexp.

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,9 @@ ikiwiki (1.16) UNRELEASED; urgency=low
     and blog pages.
   * Various CSS and formatting changes.
   * Encode link and guid urls in rss feeds to avoid illegal utf8 slipping in.
+  * Add xhtml files to the default prune regexp.
 
- -- Joey Hess <joeyh@debian.org>  Thu,  3 Aug 2006 21:36:09 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu,  3 Aug 2006 22:35:11 -0400
 
 ikiwiki (1.15) unstable; urgency=low
 
