* Also generate rel=bookmark links for permalinks.

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ ikiwiki (1.16) UNRELEASED; urgency=low
   * Various CSS and formatting changes.
   * Encode link and guid urls in rss feeds to avoid illegal utf8 slipping in.
   * Add xhtml files to the default prune regexp.
+  * Also generate rel=bookmark links for permalinks.
 
  -- Joey Hess <joeyh@debian.org>  Thu,  3 Aug 2006 22:35:11 -0400
 
