--- a/doc/plugins/htmltidy.mdwn
+++ b/doc/plugins/htmltidy.mdwn
@@ -1,6 +1,6 @@
 This plugin uses [tidy](http://tidy.sourceforge.net/) to tidy up the html
 emitted by ikiwiki. Besides being nicely formatted, this helps ensure that
-even if users enter suboptimal html, your wiki generates 100% valid html.
+even if users enter suboptimal html, your wiki generates valid html.
 
 This plugin is included in ikiwiki, but is not enabled by default.
 
