--- a/debian/changelog
+++ b/debian/changelog
@@ -20,8 +20,9 @@ ikiwiki (1.16) UNRELEASED; urgency=low
   * Add a new format hook, and make tidy use it, since tidy can really only
     operate on and output complete html documents, not the body chunks
     that sanitise gets.
+  * Fix dates in rss feeds if running localised, so they're still rfc 822.
 
- -- Joey Hess <joeyh@debian.org>  Fri,  4 Aug 2006 03:33:09 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri,  4 Aug 2006 20:43:42 -0400
 
 ikiwiki (1.15) unstable; urgency=low
 
