--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.16) UNRELEASED; urgency=low
+ikiwiki (1.16) unstable; urgency=low
 
   * Try to handle relative links in aggregated feeds. However,
     the current support is a crude hack due to limitations of XML::Feed:
@@ -22,7 +22,7 @@ ikiwiki (1.16) UNRELEASED; urgency=low
     that sanitise gets.
   * Fix dates in rss feeds if running localised, so they're still rfc 822.
 
- -- Joey Hess <joeyh@debian.org>  Fri,  4 Aug 2006 20:43:42 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri,  4 Aug 2006 20:48:36 -0400
 
 ikiwiki (1.15) unstable; urgency=low
 
