* Disable tidy generator tag.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.17) UNRELEASED; urgency=low
+
+  * Disable tidy generator tag.
+
+ -- Joey Hess <joeyh@debian.org>  Fri,  4 Aug 2006 21:00:05 -0400
+
 ikiwiki (1.16) unstable; urgency=low
 
   * Try to handle relative links in aggregated feeds. However,
