* Move tidy back to sanitize hook, found out how to only show body.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 ikiwiki (1.17) UNRELEASED; urgency=low
 
   * Disable tidy generator tag.
+  * Move tidy back to sanitize hook, found out how to only show body.
 
- -- Joey Hess <joeyh@debian.org>  Fri,  4 Aug 2006 21:00:05 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri,  4 Aug 2006 22:26:43 -0400
 
 ikiwiki (1.16) unstable; urgency=low
 
