* Turn on HTML::Template loop_context_vars; not actually used in stock   templates but can be useful for things like making comma-delimited lists   of tags or what have you.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,11 @@ ikiwiki (1.17) UNRELEASED; urgency=low
   * Disable tidy generator tag.
   * Move tidy back to sanitize hook, found out how to only show body.
   * Turn off tidy indentation too.
+  * Turn on HTML::Template loop_context_vars; not actually used in stock
+    templates but can be useful for things like making comma-delimited lists
+    of tags or what have you.
 
- -- Joey Hess <joeyh@debian.org>  Fri,  4 Aug 2006 22:29:31 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri,  4 Aug 2006 23:04:12 -0400
 
 ikiwiki (1.16) unstable; urgency=low
 
