--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -16,6 +16,7 @@ Sites that are using ikiwiki include:
 * Kelly Clowers' [personal website](http://www.clowersnet.net/)
 * Anna's [nature features](http://kitenet.net/~anna/nature-feature/)
 * [Planet Debian upstream](http://updo.kitenet.net/)
+* Roland Mas's [blog](http://roland.entierement.nu/categories/geek-en.html)
 
 Please feel free to add your own ikiwiki site!
 
