subversion repo location move

--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -18,9 +18,9 @@ While this deb has been developed on Debian unstable, it should also work on sta
 # subversion
 
 The current development version of ikiwiki can be accessed using subversion at 
-`svn://svn.kitenet.net/ikiwiki/trunk`
+`svn://ikiwiki.kitenet.net/ikiwiki/trunk`
 
-The source in subversion can be browsed [with viewcvs](http://svn.kitenet.net/trunk/?root=ikiwiki).
+The source in subversion can be browsed [with viewcvs](http://ikiwiki.kitenet.net/svn/trunk/?root=ikiwiki).
 
 If you would like to be subscribed to svn commit messages for ikiwiki,
 mail joey@kitenet.net.
