viewcvs url also changed

--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -20,7 +20,8 @@ While this deb has been developed on Debian unstable, it should also work on sta
 The current development version of ikiwiki can be accessed using subversion at 
 `svn://ikiwiki.kitenet.net/ikiwiki/trunk`
 
-The source in subversion can be browsed [with viewcvs](http://ikiwiki.kitenet.net/svn/trunk/?root=ikiwiki).
+The source in subversion can be browsed
+[with viewcvs](http://ikiwiki.kitenet.net/cgi-bin/viewcvs.cgi/trunk/?root=ikiwiki).
 
 If you would like to be subscribed to svn commit messages for ikiwiki,
 mail joey@kitenet.net.
