web commit by joey

--- a/doc/post-commit.mdwn
+++ b/doc/post-commit.mdwn
@@ -16,4 +16,4 @@ your wiki checkout and html directory. If so, you can safely make
 the wrapper suid to a user who can write there (*not* to root!). You might
 want to read [[Security]] first.
 
-[[setup]] explains setting this up in more detail.
+[[Setup]] explains setting this up in more detail.
