web commit by SergioTalensOliag: Added myself as ikiwikiuser

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -10,13 +10,14 @@ Sites that are using ikiwiki include:
 * [Bright Cloud](http://brightcloud.lcsee.wvu.edu/), a project of WVU LCSEE
 * [David Moreno Garza's personal wiki](http://anorak.com.ve/~damog/wiki)
 * [UK Software Patents info page](http://www.softwarepatents.co.uk/)
-* Paul Collins's [as-yet purposeless wiki](http://wiki.ondioline.org/).
-* Andre Luis Lopes's [personal website](http://www.andrelop.org/). Brazilian Portuguese only.
-* Alessandro Dotti Contra's [personal website](http://www.dotticontra.org/) and [weblog](http://www.dotticontra.org/blog).
+* Paul Collins's [as-yet purposeless wiki](http://wiki.ondioline.org/)
+* Andre Luis Lopes's [personal website](http://www.andrelop.org/). Brazilian Portuguese only
+* Alessandro Dotti Contra's [personal website](http://www.dotticontra.org/) and [weblog](http://www.dotticontra.org/blog)
 * Kelly Clowers' [personal website](http://www.clowersnet.net/)
 * Anna's [nature features](http://kitenet.net/~anna/nature-feature/)
 * [Planet Debian upstream](http://updo.kitenet.net/)
 * Roland Mas's [blog](http://roland.entierement.nu/categories/geek-en.html)
+* Sergio Talens-Oliag [personal wiki](http://mixinet.net/~sto/) and [blog](http://mixinet.net/~sto/blog.html)
 
 Please feel free to add your own ikiwiki site!
 
