--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -1,5 +1,7 @@
 This is the SandBox, a page anyone can edit to try out ikiwiki.
 
+how about this [[edentest]]
+
 ----
 
 Test. Проверка. テスト ığüşöçİ test
