--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,9 @@ ikiwiki (1.17) UNRELEASED; urgency=low
   * Remove <br> from end of aggregate preprocessor directive output.
   * Ship ikiwiki executable as ikiwiki.pl in source to avoid issues on
     case-sensative filesystems like OSX.
+  * Display an error message if /usr/bin/markdown can't be loaded.
 
- -- Joey Hess <joeyh@debian.org>  Tue,  8 Aug 2006 10:52:23 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed,  9 Aug 2006 23:01:02 -0400
 
 ikiwiki (1.16) unstable; urgency=low
 
