--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -2,7 +2,7 @@ This is the SandBox, a page anyone can edit to try out ikiwiki.
 
 ----
 
-Test. Проверка. テスト ığüşöçİ test
+Test. Проверка. テスト ığüşöçİ
 
 Here's a paragraph.
 
