* Improve markdown loading. First, try to load it as a properl perl module,   in case it was installed as one. Then fall back to trying   /usr/bin/markdown. * Document in install page how to install markdown, since it has no   installation procedure in the upstream tarball.

--- a/doc/install.mdwn
+++ b/doc/install.mdwn
@@ -6,6 +6,10 @@ installed, and also uses the following perl modules if available:
 `HTML::Template` `Mail::SendMail` `Time::Duration` `Date::Parse`,
 `HTML::Scrubber`, `RPC::XML`, `XML::Simple`, `XML::Feed`
 
+If you're installing MarkDown by hand, note that it should be installed as
+`Markdown.pm` somewhere in perl's module search path, or alternately as
+`/usr/bin/markdown`. Ikiwiki will find it under either name.
+
 If you want to install from the tarball, you should make sure that the
 required perl modules are installed, then run:
 
