--- a/doc/plugins/orphans.mdwn
+++ b/doc/plugins/orphans.mdwn
@@ -1,5 +1,5 @@
-This plugin generates a list of possibly orphaned pages -- pages that no other page
-links to.
+This plugin generates a list of possibly orphaned pages -- pages that no
+other page links to.
 
 The optional parameter "pages" can be a [[PageSpec]] specifying the pages
 to check for orphans, default is search them all.
