--- a/debian/changelog
+++ b/debian/changelog
@@ -9,9 +9,13 @@ ikiwiki (1.17) UNRELEASED; urgency=low
   * Remove <br> from end of aggregate preprocessor directive output.
   * Ship ikiwiki executable as ikiwiki.pl in source to avoid issues on
     case-sensative filesystems like OSX.
-  * Display an error message if /usr/bin/markdown can't be loaded.
+  * Improve markdown loading. First, try to load it as a properl perl module,
+    in case it was installed as one. Then fall back to trying
+    /usr/bin/markdown.
+  * Document in install page how to install markdown, since it has no
+    installation procedure in the upstream tarball.
 
- -- Joey Hess <joeyh@debian.org>  Wed,  9 Aug 2006 23:01:02 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed,  9 Aug 2006 23:50:25 -0400
 
 ikiwiki (1.16) unstable; urgency=low
 
