--- a/doc/patchqueue/rst.mdwn
+++ b/doc/patchqueue/rst.mdwn
@@ -1,7 +1,10 @@
 This is a whole lot better than nothing, but it's a shame it forks python
 every page. Anyone want to get [this](http://search.cpan.org/~nodine/Text-Restructured-0.003016/) into Debian and use it instead?
--- [[Joey]]
-	
+--[[Joey]]
+
+Actually, if someone adds support for it to ikiwiki, I would be glad to get
+the package into Debian myself --[[Joey]]
+
 	#!/usr/bin/perl
 	# Very simple reStructuredText processor.
 	#
