suggest running make test as part of install

--- a/doc/install.mdwn
+++ b/doc/install.mdwn
@@ -15,6 +15,7 @@ required perl modules are installed, then run:
 
         perl Makefile.PL
         make
+	make test # optional
         make install
 
 See [[download]] for where to get it.
