--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -18,7 +18,7 @@ Sites that are using ikiwiki include:
 * [Planet Debian upstream](http://updo.kitenet.net/)
 * Roland Mas's [blog](http://roland.entierement.nu/categories/geek-en.html)
 * Sergio Talens-Oliag [personal wiki](http://mixinet.net/~sto/) and [blog](http://mixinet.net/~sto/blog.html)
-* Christian Aichinger's homepage at <http://greek0.net/>
+* Christian Aichinger's [homepage](http://greek0.net/)
 
 Please feel free to add your own ikiwiki site!
 
