--- a/doc/install.mdwn
+++ b/doc/install.mdwn
@@ -1,5 +1,8 @@
 The easiest way to install ikiwiki is using the Debian package.
 
+Ikiwiki is a perl program, and needs a recent version of perl such as
+5.8.8. (5.8.0 has been reported not to work).
+
 Ikiwiki requires [[MarkDown]] and the `HTML::Parser` perl module be
 installed, and also uses the following perl modules if available: 
 `CGI::Session` `CGI::FormBuilder` (version 3.02.02 or newer)
