--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.17) UNRELEASED; urgency=low
+ikiwiki (1.17) unstable; urgency=low
 
   * Disable tidy generator tag.
   * Move tidy back to sanitize hook, found out how to only show body.
@@ -19,7 +19,7 @@ ikiwiki (1.17) UNRELEASED; urgency=low
   * Suck in the page content when generating an inline archive page, to work
     around the meta plugin's lack of caching of title metadata across runs.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 12 Aug 2006 12:30:48 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 12 Aug 2006 12:52:13 -0400
 
 ikiwiki (1.16) unstable; urgency=low
 
