--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -13,7 +13,9 @@ If using Debian unstable or testing:
 
 Or download the deb from <http://packages.debian.org/unstable/web/ikiwiki>.
 
-While this deb has been developed on Debian unstable, it should also work on stable, although to get the CGI stuff working on stable, you will need to upgrade to a newer version of libcgi-formbuilder-perl, `3.02.02`.
+While this deb has been developed on Debian unstable, it should also work
+on stable, although to get the CGI stuff working on stable, you will need
+to upgrade to a newer version of libcgi-formbuilder-perl, `3.02.02`.
 
 # subversion
 
