--- a/doc/plugins/meta.mdwn
+++ b/doc/plugins/meta.mdwn
@@ -28,6 +28,10 @@ You can use any field names you like, but here are some predefined ones:
   Overrides the title of the page, which is generally the same as the
   page name.
 
+  Note that if the title is overrideen, a "title_overridden" variable will
+  be set to a true value in the template; this can be used to format things
+  differently in this case.
+
 * license
 
   Specifies a copyright license for the page, for example, "GPL".
