--- a/doc/todo/case.mdwn
+++ b/doc/todo/case.mdwn
@@ -7,5 +7,5 @@ Also, newly created pagenames that include upper case characters should
 perhaps not automatically be converted to lower case then.
 
 Also, it's currently possible to check in a filename with uppercase and
-ikiwiki will render it that way, but fail to edit it online and probably in
-other ways.
+ikiwiki will render it that way, but fail to edit it online, fail to link to
+it properly from other pages, etc.
