--- a/basewiki/wikilink.mdwn
+++ b/basewiki/wikilink.mdwn
@@ -5,14 +5,15 @@ For example "\[[WikiLink]]".
 If you ever need to write something like "\[[WikiLink]] without creating a
 wikilink, just prefix it with a "\", like "\\\\[[WikiLink]]".
 
-Note that there are some special [[SubPage/LinkingRules]] that come into
-play when linking between [[SubPage]]s.
+There are some special [[SubPage/LinkingRules]] that come into play when
+linking between [[SubPage]]s.
 
-WikiLinks can be entered in any case you like, the page they link to is
-always lowercased.
-
-Note that if the file linked to by a WikiLink looks like an image, it will
+Also, iIf the file linked to by a WikiLink looks like an image, it will
 be displayed inline on the page.
+
+WikiLinks are matched with page names in a case-insensative manner, so you
+don't need to worry about getting the case the same, and can capitalise
+links at the start of a sentence, and so on.
 
 It's also possible to write a WikiLink that uses something other than the
 page name as the link text. For example "\[[foo_bar|SandBox]]" links to the
