--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.18) UNRELEASED; urgency=low
+ikiwiki (1.18) unstable; urgency=low
 
   * The last release accidentially installed ikiwiki as ikiwiki.pl, now fixed.
   * Add --version.
@@ -16,7 +16,7 @@ ikiwiki (1.18) UNRELEASED; urgency=low
     should be fully supported throughout ikiwiki.
   * Recommend rebuilding wikis on upgrade to this version.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 12 Aug 2006 21:26:29 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 12 Aug 2006 22:10:48 -0400
 
 ikiwiki (1.17) unstable; urgency=low
 
