--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.19) UNRELEASED; urgency=low
+
+  * Fix a bug in page type determination during online editing.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 13 Aug 2006 01:53:02 -0400
+
 ikiwiki (1.18) unstable; urgency=low
 
   * The last release accidentially installed ikiwiki as ikiwiki.pl, now fixed.
