--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 ikiwiki (1.19) UNRELEASED; urgency=low
 
-  * Fix a bug in page type determination during online editing.
+  * Fix several related bugs in page type determination during online editing.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 13 Aug 2006 01:53:02 -0400
 
