web commit by neal

--- a/doc/wikilink.mdwn
+++ b/doc/wikilink.mdwn
@@ -3,7 +3,7 @@ WikiLinks provide easy linking between pages of the wiki. To create a
 For example "\[[WikiLink]]".
 
 The file name associated with a wiki link is create as follows: capital
-letters converted to lower case and spaces to underscores.  Finally,
+letters are converted to lower case and spaces to underscores.  Finally,
 the file extention is added.
 
 If you ever need to write something like "\[[WikiLink]] without creating a
