--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -19,6 +19,7 @@ Sites that are using ikiwiki include:
 * Roland Mas's [blog](http://roland.entierement.nu/categories/geek-en.html)
 * Sergio Talens-Oliag [personal wiki](http://mixinet.net/~sto/) and [blog](http://mixinet.net/~sto/blog.html)
 * Christian Aichinger's [homepage](http://greek0.net/)
+* <a href="http://modeemi.fi/~tuomov/ion/">ion</a> window manager homepage
 
 Please feel free to add your own ikiwiki site!
 
