--- a/basewiki/wikilink.mdwn
+++ b/basewiki/wikilink.mdwn
@@ -8,7 +8,7 @@ wikilink, just prefix it with a "\", like "\\\\[[WikiLink]]".
 There are some special [[SubPage/LinkingRules]] that come into play when
 linking between [[SubPage]]s.
 
-Also, iIf the file linked to by a WikiLink looks like an image, it will
+Also, if the file linked to by a WikiLink looks like an image, it will
 be displayed inline on the page.
 
 WikiLinks are matched with page names in a case-insensative manner, so you
