--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 ikiwiki (1.19) UNRELEASED; urgency=low
 
   * Fix several related bugs in page type determination during online editing.
+  * Add some locking to prevent 2 aggregators from running at once.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 13 Aug 2006 01:53:02 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 16 Aug 2006 13:28:34 -0400
 
 ikiwiki (1.18) unstable; urgency=low
 
