* Relicense the templates and basewiki under the 2-clause BSD license.   Since these can easily become part of other people's websites, they   should be under as permissive a license as possible.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ikiwiki (1.20) UNRELEASED; urgency=low
+
+  * Relicense the templates and basewiki under the 2-clause BSD license.
+    Since these can easily become part of other people's websites, they
+    should be under as permissive a license as possible.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 16 Aug 2006 16:30:44 -0400
+
 ikiwiki (1.19) unstable; urgency=low
 
   * Fix several related bugs in page type determination during online editing.
