--- a/doc/freesoftware.mdwn
+++ b/doc/freesoftware.mdwn
@@ -1,4 +1,4 @@
 ikiwiki is licensed under the terms of the GNU [[GPL]].
 
 The parts of ikiwiki that become part of your own wiki (the basewiki pages
-and the [[template]]) are licensed using a form of the [[BSD]] license.
+and the [[templates]]) are licensed using a form of the [[BSD]] license.
