--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -1,7 +1,7 @@
 Most of ikiwiki's [[features]] are implemented as plugins. Beyond the
 [[type/core]] features, there are plugins to [[type/format]] text,
 use [[type/tags]], show [[type/meta]] information, do other [[type/useful]]
-stuff, or just have [[type/fun]].
+stuff, add [[type/chrome]] to the wiki, or just have [[type/fun]].
 
 There's documentation if you want to [[write]] your own plugins, or you can
 install and use plugins contributed by others. 
