note on disabling sidebar

--- a/doc/plugins/sidebar.mdwn
+++ b/doc/plugins/sidebar.mdwn
@@ -7,6 +7,10 @@ Typically this will be a page in the root of the wiki, but it can also be a
 be treated as a sidebar for the [[plugins]] page, and of all of its
 SubPages, if the plugin is enabled.
 
+Note that to disable a sidebar for a [[SubPage]] of a page that has a sidebar,
+you can create a sidebar page that is completely empty. This will turn off
+the sidebar altogether.
+
 This plugin is included in ikiwiki, but is not enabled by default.
 
 [[tag type/chrome]]
