* Call filter hooks on inlined page content.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ ikiwiki (1.21) UNRELEASED; urgency=low
   * If a page links to itself, mark up the link text in a span with
     class="selflink" so that it can be styled. I don't have a useful style
     defined for that though.
+  * Call filter hooks on inlined page content.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 17 Aug 2006 20:18:23 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 17 Aug 2006 20:39:20 -0400
 
 ikiwiki (1.20) unstable; urgency=low
 
