--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -15,7 +15,7 @@ Released 29 April 2006.
 * Unit test suite (with tests of at least core stuff like
   [[PageSpec]]). (status: exists, could of course use more tests)
 * [[Plugins]] _(status: done, interface still not quite stable)_
-* [[Tags]] _(status: partial)_
+* [[Tags]] _(status: fair)_
 * Should have fully working [[todo/utf8]] support. _(status: fair)_
 * [[Optimised_rendering|todo/optimisations]] if possible. Deal with other
   scalability issues. _(status: 45%-60%+ speedup since 1.0)_
