--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,9 @@ ikiwiki (1.21) UNRELEASED; urgency=low
   * Clean up yes/no parameter parsing in inline plugin.
   * Implemented better cycle detection in the inline plugin; nested inlines
     will now work.
+  * Add a map plugin contributed by Alessandro Dotti Contra.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 17 Aug 2006 23:27:38 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 18 Aug 2006 12:10:37 -0400
 
 ikiwiki (1.20) unstable; urgency=low
 
