web commit by StruanJudd

--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -38,3 +38,6 @@ Suggestions of ideas for plugins:
 All the kinds of plugins that blogging software has is also a possibility:
 
 * Blog post calendar
+
+* How about an event calendar. Events could be sub-pages with an embedded 
+ code to detail recurrance and/or event date/time
