--- a/doc/plugins/inline.mdwn
+++ b/doc/plugins/inline.mdwn
@@ -22,7 +22,8 @@ directive:
   full controls.
 * `raw` - Rather than the default behavior of creating a [[blog]],
   if raw is set to "yes", the page will be included raw, without additional
-  markup around it, as if it were a literal part of the inlining page.
+  markup around it, as if it were a literal part of the source of the 
+  inlining page.
 
 This plugin is enabled by default.
 
